[package]
name = "corelib-rust"
version = "0.1.11"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3.8.3", features = ["napi9", "tokio_rt"] }
napi-derive = "3.5.2"
chrono = { version = "0.4", features = ["clock"] }
cron = "0.15.0"

# === YAHOO STREAMING ===
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tungstenite = "0.28"
redb = "3.1.1"
base64 = "0.22"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.14.3"

# CLI binary only
clap = { version = "4.5", features = ["derive"], optional = true }

[build-dependencies]
napi-build = "2"

[[bin]]
name = "yahoo_streamer"
required-features = ["clap"]