[package]
name = "corelib-rust"
version = "0.1.14"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3.8.4", features = ["napi9", "tokio_rt"] }
napi-derive = "3.5.3"
chrono = { version = "0.4", features = ["clock"] }
cron = "0.16.0"
thiserror = "2.0.18"
futures = "0.3.32"

# === YAHOO STREAMING ===
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tungstenite = "0.29.0"
redb = "4.0.0"
base64 = "0.22"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.14.3"

# === RETRIEVE / KY ===
reqwest = { version = "0.13.2", features = ["json"] }
bytes = "1.10.0"
http = "1.2.0"

# CLI binary only
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
wiremock = "0.6.5"

[build-dependencies]
napi-build = "2"

[[bin]]
name = "nasdaq_polling"
required-features = ["clap"]

[[bin]]
name = "yahoo_streamer"
required-features = ["clap"]
