[package]
name = "corelib-rust"
version = "0.1.14"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3.8.6", features = ["napi9", "tokio_rt"] }
napi-derive = "3.5.5"
chrono = { version = "0.4.44", features = ["clock"] }
cron = "0.16.0"
thiserror = "2.0.18"
futures = "0.3.32"

# === YAHOO STREAMING ===
tokio = { version = "1.52.2", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tungstenite = "0.29.0"
redb = "4.1.0"
base64 = "0.22.1"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
prost = "0.14.3"

# === RETRIEVE / KY ===
reqwest = { version = "0.13.3", features = ["json"] }
bytes = "1.11.1"
http = "1.4.0"

# CLI binary only
clap = { version = "4.6.1", features = ["derive"], optional = true }

[dev-dependencies]
wiremock = "0.6.5"

[build-dependencies]
napi-build = "2.3.1"

[[bin]]
name = "alpaca_streamer"
required-features = ["clap"]

[[bin]]
name = "nasdaq_polling"
required-features = ["clap"]

[[bin]]
name = "yahoo_streamer"
required-features = ["clap"]
